--- a/public/angular/app/index.html
+++ b/public/angular/app/index.html
@@ -57,6 +57,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/services/webservice.js"></script>
         <script src="scripts/services/storage.js"></script>
+        <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <!-- endbuild -->
 </body>
