--- a/public/angular/app/index.html
+++ b/public/angular/app/index.html
@@ -58,6 +58,7 @@
         <script src="scripts/services/webservice.js"></script>
         <script src="scripts/services/storage.js"></script>
         <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/controllers/navigation.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <!-- endbuild -->
 </body>
