--- a/public/angular/app/index.html
+++ b/public/angular/app/index.html
@@ -59,6 +59,7 @@
     <script src="scripts/services/storage.js"></script>
     <script src="scripts/controllers/login.js"></script>
     <script src="scripts/controllers/navigation.js"></script>
+    <script src="scripts/controllers/messages.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <!-- endbuild -->
 </body>
