--- a/public/angular_app/app/index.html
+++ b/public/angular_app/app/index.html
@@ -50,6 +50,9 @@
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/gsap/src/uncompressed/TweenMax.js"></script>
+    <script src="bower_components/ng-Fx/dist/ng-Fx.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
